Fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,13 @@
   .scrollbar-hide::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera */
   }
+  html, body {
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+  }
+
+  html::-webkit-scrollbar, body::-webkit-scrollbar {
+  display: none;
+  }
 }
